--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "type": "git",
     "url": "git+https://github.com/travezripley/node200-ejs-portfolio.git"
   },
-  "author": "Travis Ripley <Theripleys@gmail.com>",
+  "author": "Salil Gurung",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/travezripley/node200-ejs-portfolio/issues"
