--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "mailchimp-api-v3": "^1.13.0",
     "mocha": "^6.1.4",
     "morgan": "^1.9.1",
+    "node": "^13.3.0",
     "request": "^2.88.0"
   },
   "devDependencies": {
